Bug 1589082 - make it clear we don't implement getProtocolHandlerInfoFromOS in the child service on mac, r=haik

Differential Revision: https://phabricator.services.mozilla.com/D52364